--- a/app/src/main/res/layout/adapter_meizi.xml
+++ b/app/src/main/res/layout/adapter_meizi.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/meizi_card_view"
+    android:id="@+id/group_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="4dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="4dp">
+    android:layout_height="100dp">
 
-    <com.left.gank.widget.ImageDefaultView
-        android:id="@+id/img_meizi"
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:elevation="@dimen/activity_horizontal_margin"
-        android:foreground="?android:attr/selectableItemBackground"
         android:scaleType="centerCrop"
+        android:src="@drawable/ic_image_default"
         android:transitionName="@string/transition_welfare_image" />
 </RelativeLayout>
