--- a/app/src/main/res/layout/fragment_main_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_main_bottom_navigation.xml
@@ -12,17 +12,9 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:layout_gravity="bottom"
-        android:gravity="bottom"
-        app:bb_activeTabAlpha="1"
-        app:bb_activeTabColor="@color/white"
-        app:bb_behavior="underNavbar"
-        app:bb_inActiveTabAlpha="0.5"
-        app:bb_inActiveTabColor="@color/white"
-        app:bb_tabXmlResource="@xml/bottombar_tabs_color_changing"
-        app:bb_titleTextAppearance="@style/BottomTextAppearance" />
+        android:layout_height="wrap_content"
+        app:menu="@menu/bottombar_tabs_color_changing" />
 </LinearLayout>
