--- a/app/src/main/res/layout/fragment_main_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_main_bottom_navigation.xml
@@ -14,7 +14,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/Widget.Gank.BottomNav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         app:menu="@menu/bottombar_tabs_color_changing" />
 </LinearLayout>
