--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="superSize">45sp</dimen>
     <dimen name="superBigSize">56sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="speaker_headshot_size">40dp</dimen>
 </resources>
