--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,94 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- light theme -->
-    <style name="AppTheme.light" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:windowAllowEnterTransitionOverlap">true</item>
-        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+
+    <style name="Design" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
+    <!-- Base application theme. -->
+    <style name="Design.App">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="themeTabLayoutBackground">@color/colorPrimary</item>
-        <item name="textPrimaryColor">@color/text_default</item>
-        <item name="textSecondaryColor">@color/body_text_2</item>
-        <item name="baseAdapterItemBackground">@color/white</item>
-        <item name="baseAdapterItemTextColor">@color/body_text_1</item>
-        <item name="navigationBackground">@color/white</item>
-        <item name="themeBackground">@color/refresh_background_light</item>
-        <item name="textTitleColor">@color/text_default</item>
-        <item name="aboutTextViewBackground">@color/white</item>
-        <item name="aboutBackground">@color/aboutBackground_light</item>
-        <item name="colorControlHighlight">@color/colorControlHighlight_light</item>
-        <item name="updateVersionTextColor">@color/body_text_1</item>
-        <item name="updateVersionBackgroundColor">@color/white</item>
-        <item name="updateVersionButtonTextColor">@color/body_text_2</item>
-        <item name="collectBackground">@color/collect_background_light</item>
-        <item name="meiziDailyItemBackground">@color/meizi_item_background_light</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="settingBackground">@color/white</item>
-        <item name="lyItemSelectBackground">@drawable/bg_leave_frame_full</item>
-        <item name="swipeRefreshLayoutProgressSchemeColor">@color/white</item>
-        <item name="swipeRefreshLayoutSchemeColors">@color/colorAccent</item>
-        <item name="budejieAdapterTitleColor">@color/text_default</item>
+
+        <!-- Window attributes -->
+        <item name="android:windowBackground">@color/white</item>
+
+        <!-- AlertDialog attributes -->
+        <item name="alertDialogTheme">@style/Design.DialogAlert.Theme</item>
+        <item name="alertDialogStyle">@style/Design.DialogAlert.Style</item>
+
+        <!-- Toolbar styles -->
+        <item name="toolbarStyle">@style/Design.Toolbar</item>
+
     </style>
 
-    <!-- night theme -->
-    <style name="AppTheme.Night" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowContentTransitions">true</item>
-        <item name="colorPrimary">@color/colorPrimary_dark</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark_dark</item>
-        <item name="colorAccent">@color/colorAccent_dark</item>
-        <item name="themeTabLayoutBackground">@color/colorPrimary_dark</item>
-        <item name="textPrimaryColor">@color/text_primary_dark</item>
-        <item name="textSecondaryColor">@color/text_secondary_dark</item>
-        <item name="baseAdapterItemBackground">@color/base_adapter_item_background</item>
-        <item name="baseAdapterItemTextColor">#fff5f5f5</item>
-        <item name="navigationBackground">@color/colorAccent_dark</item>
-        <item name="themeBackground">@color/background_dark</item><!-- 应用背景色 -->
-        <item name="textTitleColor">@color/material_grey_50</item>
-        <item name="aboutTextViewBackground">@color/base_adapter_item_background</item>
-        <item name="aboutBackground">@color/background_dark</item>
-        <item name="colorControlHighlight">@color/colorControlHighlight_dark</item>
-        <item name="updateVersionTextColor">@color/material_grey_50</item>
-        <item name="updateVersionBackgroundColor">@color/base_adapter_item_background</item>
-        <item name="updateVersionButtonTextColor">@color/blue_pressed</item>
-        <item name="collectBackground">@color/collect_background_dark</item>
-        <item name="meiziDailyItemBackground">@color/base_adapter_item_background</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="settingBackground">@color/background_dark</item>
-        <item name="lyItemSelectBackground">@drawable/ripple_bg_dark</item>
-        <item name="swipeRefreshLayoutProgressSchemeColor">
-            @color/baseSwipeRefreshLayoutProgressSchemeColor
-        </item>
-        <item name="swipeRefreshLayoutSchemeColors">@color/baseSwipeRefreshLayoutSchemeColors</item>
-        <item name="budejieAdapterTitleColor">@color/book_recycler_item_bg</item>
+    <!-- 闪屏页主题 -->
+    <style name="Design.App.Splash">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/white</item>
     </style>
 
-    <style name="AppTheme.light.NoActionBar">
+    <!-- WebView 主题 -->
+    <style name="Design.App.Web">
         <item name="android:backgroundDimEnabled">false</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowDisablePreview">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
-    <style name="AppTheme.Night.NoActionBar">
-        <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+    <!-- 图片浏览主题 -->
+    <style name="Design.Gallery" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@color/black</item>
+        <item name="colorAccent">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/black</item>
     </style>
 
-    <style name="AppTheme.Black" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary_dark</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark_dark</item>
-        <item name="colorAccent">@color/colorAccent_dark</item>
-        <item name="android:windowAllowEnterTransitionOverlap">true</item>
-        <item name="android:windowAllowReturnTransitionOverlap">true</item>
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:windowExitTransition">@android:transition/explode</item>
-        <item name="android:windowAnimationStyle">@style/AppTheme.Black.WindowStyle</item>
+    <!-- 默认 dialog 主题 -->
+    <style name="Design.DialogAlert.Theme" parent="@style/ThemeOverlay.AppCompat.Dialog.Alert">
+        <item name="buttonBarPositiveButtonStyle">@style/Design.DialogAlert.Positive.ButtonStyle
+        </item>
+        <item name="buttonBarNegativeButtonStyle">@style/Design.DialogAlert.Negative.ButtonStyle
+        </item>
+    </style>
+
+    <style name="Design.DialogAlert.Style" parent="@style/AlertDialog.AppCompat.Light">
+        <item name="buttonBarPositiveButtonStyle">@style/Design.DialogAlert.Positive.ButtonStyle
+        </item>
+        <item name="buttonBarNegativeButtonStyle">@style/Design.DialogAlert.Negative.ButtonStyle
+        </item>
+    </style>
+
+    <style name="Design.DialogAlert.Positive.ButtonStyle" parent="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Design.DialogAlert.Negative.ButtonStyle" parent="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/text_999999</item>
+    </style>
+
+    <!-- toolbar 主题-->
+    <style name="Design.Toolbar" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="titleTextAppearance">@style/Design.Toolbar.Title</item>
+    </style>
+
+    <style name="Design.Toolbar.Title" parent="@style/TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
