--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Design" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Design" parent="Theme.AppCompat.DayNight.NoActionBar">
 
     </style>
 
     <!-- Base application theme. -->
     <style name="Design.App">
-        <item name="colorControlNormal">@color/b3ffffff</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
