--- a/app/src/main/res/color/secondary_text_material_dark.xml
+++ b/app/src/main/res/color/secondary_text_material_dark.xml
@@ -15,5 +15,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false" android:alpha="@dimen/disabled_alpha_material_dark" android:color="@color/secondary_text_default_material_dark" />
-    <item android:color="@color/secondary_text_default_material_dark" />
+    <item android:color="@color/white" />
 </selector>
