--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
+    <!-- path = "" 表示 外部存储区域的根目录 -->
     <external-path
-        name="beta_external_path"
-        path="Download/" />
+        name="share"
+        path="" />
+    <!--代表外部存储区域的根目录下的文件 Environment.getExternalStorageDirectory()/DCIM/camerademo目录-->
     <external-path
-        name="beta_external_files_path"
-        path="Android/data/" />
+        name="rx_DCIM"
+        path="DCIM/camerademo" />
+    <!--代表外部存储区域的根目录下的文件 Environment.getExternalStorageDirectory()/Pictures/camerademo目录-->
+    <external-path
+        name="rx_Pictures"
+        path="Pictures/camerademo" />
+    <!--代表app 私有的存储区域 Context.getFilesDir()目录下的images目录 /data/user/0/应用包名/files/images-->
+    <files-path
+        name="rx_private_files"
+        path="images" />
+    <!--代表app 私有的存储区域 Context.getCacheDir()目录下的images目录 /data/user/0/应用包名/cache/images-->
+    <cache-path
+        name="rx_private_cache"
+        path="images" />
+    <!--代表app 外部存储区域根目录下的文件 Context.getExternalFilesDir(Environment.DIRECTORY_PICTURES)目录下的Pictures目录-->
+    <!--/storage/emulated/0/Android/data/应用包名/files/Pictures-->
+    <external-files-path
+        name="rx_external_files"
+        path="Pictures" />
+    <!--代表app 外部存储区域根目录下的文件 Context.getExternalCacheDir目录下的images目录-->
+    <!--/storage/emulated/0/Android/data/应用包名/cache/images-->
+    <external-cache-path
+        name="rx_external_cache"
+        path="" />
 </paths>
