修改 GlideApp 为 Glide 引用 修改 设置界面

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -150,7 +150,7 @@
                 app:showDividers="middle">
 
                 <com.left.gank.widget.LYRelativeLayoutRipple
-                    android:id="@+id/download"
+                    android:id="@+id/mine_download_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingStart="16dp"
