--- a/app/src/main/res/layout/fragment_video_view.xml
+++ b/app/src/main/res/layout/fragment_video_view.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.left.gank.ui.web.X5WebView
+    <com.tencent.smtt.sdk.WebView
         android:id="@+id/web_video"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/web_progress_bar"
