--- a/app/src/main/res/layout/adapter_android.xml
+++ b/app/src/main/res/layout/adapter_android.xml
@@ -4,77 +4,73 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
-    android:orientation="horizontal">
+    android:background="?attr/selectableItemBackground"
+    android:paddingStart="12dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="12dp"
+    android:paddingBottom="10dp">
+
 
     <RelativeLayout
+        android:id="@+id/android_rl_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="12dp"
-        android:paddingBottom="10dp">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:id="@+id/android_rl_data"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="6dp"
-                    android:contentDescription="@null"
-                    android:src="@drawable/ic_default_avatar_1" />
-
-                <TextView
-                    android:id="@+id/author_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="start"
-                    android:maxLines="1"
-                    android:text=""
-                    android:textColor="@color/text_666666"
-                    android:textSize="@dimen/normalSize" />
-            </LinearLayout>
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginEnd="6dp"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_default_avatar_1" />
 
             <TextView
-                android:id="@+id/time"
+                android:id="@+id/author_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
                 android:ellipsize="end"
-                android:gravity="center_vertical"
+                android:gravity="start"
                 android:maxLines="1"
                 android:text=""
-                android:textColor="@color/text_999999"
-                android:textSize="@dimen/smallSize" />
-
-        </RelativeLayout>
+                android:textColor="@color/text_666666"
+                android:textSize="@dimen/normalSize" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/android_rl_data"
-            android:layout_marginTop="4dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:ellipsize="end"
-            android:gravity="start"
-            android:lineSpacingExtra="3dp"
-            android:maxLines="3"
+            android:gravity="center_vertical"
+            android:maxLines="1"
             android:text=""
-            android:textColor="@color/black"
-            android:textSize="@dimen/normalSize" />
+            android:textColor="@color/text_999999"
+            android:textSize="@dimen/smallSize" />
+
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/android_rl_data"
+        android:layout_marginTop="4dp"
+        android:ellipsize="end"
+        android:gravity="start"
+        android:lineSpacingExtra="3dp"
+        android:maxLines="3"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="@dimen/normalSize" />
 </RelativeLayout>
