--- a/app/src/main/res/layout/adapter_daily_girl.xml
+++ b/app/src/main/res/layout/adapter_daily_girl.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
     android:elevation="1dp"
     android:orientation="horizontal">
 
     <LinearLayout
-        android:id="@+id/daily_meizi_ll_body"
+        android:id="@+id/daily_group"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingBottom="16dp"
-        android:paddingEnd="16dp"
         android:paddingStart="16dp"
-        android:paddingTop="16dp">
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="16dp">
 
         <ImageView
-            android:id="@+id/daily_meizi_img_icon"
+            android:id="@+id/daily_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@null"
-            android:src="@drawable/ic_daily_meizi"/>
+            android:src="@drawable/ic_daily_meizi" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start|center"
                 android:text=""
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
